Logo VeloCite pour l'admin

--- a/resources/css/admin.css
+++ b/resources/css/admin.css
@@ -62,7 +62,7 @@ html, body{
 }
 .header .x-panel-body { 
 	background-color: #F0F0F0;
-	background: url(../images/logowithoutcomcom.png) no-repeat;
+	background: url(../images/logo-admin.png) no-repeat;
 }
 .headergt .x-panel-body {
     background-color: #F0F0F0;
@@ -74,8 +74,6 @@ html, body{
 }
 div#header {
 	background-color: #F0F0F0;
-	/*background: url(../images/logo.png) no-repeat;*/
-	/*background: url(../images/logowithoutcomcom.png) no-repeat;*/
 	height: 110px;
 	margin-top: 1px;
 }
