#144 : add stats to the admin interface

--- a/resources/css/admin.css
+++ b/resources/css/admin.css
@@ -311,3 +311,25 @@ cursor: not-allowed;
 .disabled {
 	height:50px;
 }
+
+div#header H1 {
+    color:blue;
+}
+div#header .statusItem{
+
+    color:blue;
+    float:left;
+    padding-left:10px;
+    text-align: center;
+}
+div#header .statusItem H2{
+
+    color:blue;
+    font-size:100%;
+}
+div#header .statusItem span{
+
+    color:blue;
+    font-weight:bold;
+    font-size:350%
+}
